<resources>
    <string name="app_name">ALC Project</string>
    <string name="alc_logo">ALC _logo</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="submit">Submit</string>

    <string name="scores_main_text_skill">%1$s Learning hours, %2$s</string>
    <string name="scores_main_text_iq">%1$s skill IQ score, %2$s</string>

    <string name="scores_dummy">223 Learning hours, Kenya</string>
    <string name="dummy_iq_score">300 skill IQ score, Egypt</string>
    <string name="name_dummy">John Doe</string>


    <string name="skill_image_gads">skill image GADS</string>
    <string name="iq_image_gads">IQ Image GADS</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_address_hint">Email Address</string>
    <string name="github_edit_text_hint">Project on GITHUB (Link)</string>
    <string name="not_successful">Submission not Successful</string>
    <string name="confirmation">Are you sure?</string>
    <string name="successful">Submission Successful</string>
    <string name="yes">Yes</string>

</resources>